samples/_failures_safe/1761602739_5a444d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54dcb2c5.c: In function ‘main’:
./samples/SAFE/__tmp_54dcb2c5.c:174:5: error: expected expression at end of input
  174 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_54dcb2c5.c:174:5: error: expected declaration or statement at end of input
